[package]
name = "bhg"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Subašić <antonio@subasic.me>"]
description = "A simple Block Header Generator"
repository = "https://github.com/antoniosubasic/bhg"
license = "MIT"
keywords = ["blockheader", "generator", "rust", "cli"]
readme = "README.md"
documentation = "https://github.com/antoniosubasic/bhg#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = "1.0.193"
serde_json = "1.0.108"
chrono = "0.4.31"
