[package]
name = "bhg"
version = "0.1.1"
edition = "2021"
authors = ["Antonio Subašić <antonio@subasic.me>"]
description = "A simple Block Header Generator"
repository = "https://github.com/antoniosubasic/bhg"
license-file = "LICENSE"
keywords = ["blockheader", "generator", "rust", "cli"]
readme = "README.md"
documentation = "https://github.com/antoniosubasic/bhg#readme"

[dependencies]
dirs = "5.0.1"
serde = "1.0.193"
serde_json = "1.0.108"
chrono = "0.4.31"
